--- a/MetroInfo/Base.lproj/Main.storyboard
+++ b/MetroInfo/Base.lproj/Main.storyboard
@@ -12,11 +12,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" id="GP6-nr-gNz">
+                                <rect key="frame" x="0.0" y="65" width="320" height="232"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </mapView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="xlG-R7-Y5p" customClass="MetroListTableView">
                                 <rect key="frame" x="0.0" y="233" width="320" height="335"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <searchBar key="tableHeaderView" contentMode="redraw" id="uER-tZ-M5W">
+                                <searchBar key="tableHeaderView" contentMode="redraw" placeholder="请输入站点名" id="uER-tZ-M5W">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                     <textInputTraits key="textInputTraits"/>
@@ -44,10 +48,6 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" id="GP6-nr-gNz">
-                                <rect key="frame" x="0.0" y="65" width="320" height="232"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -63,13 +63,18 @@
                     <connections>
                         <outlet property="cityButton" destination="1bC-Sx-M62" id="jaY-2W-lpV"/>
                         <outlet property="metroMapView" destination="GP6-nr-gNz" id="U5i-iz-NmZ"/>
+                        <outlet property="metroSearchBar" destination="uER-tZ-M5W" id="FKe-uG-ClA"/>
+                        <outlet property="metroSearchController" destination="eYf-ex-vks" id="RtQ-ZC-WnQ"/>
                         <outlet property="searchDisplayController" destination="eYf-ex-vks" id="ZMl-c4-RMW"/>
                         <outlet property="tvMetroListView" destination="xlG-R7-Y5p" id="BVL-wU-nOE"/>
                         <segue destination="zVC-Rg-i4d" kind="unwind" unwindAction="unwindToList:" id="KV5-mJ-4DY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
-                <searchDisplayController id="eYf-ex-vks">
+                <searchDisplayController searchResultsTitle="搜索结果" id="eYf-ex-vks">
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="keyPath" value="YES"/>
+                    </userDefinedRuntimeAttributes>
                     <connections>
                         <outlet property="delegate" destination="vXZ-lx-hvc" id="DF0-lF-FPy"/>
                         <outlet property="searchBar" destination="uER-tZ-M5W" id="LVU-BD-aJ7"/>
@@ -145,21 +150,51 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PlaceHolder" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="aw0-HA-C4n">
+                                <rect key="frame" x="16" y="330" width="288" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="回程发车时间" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Od9-Xx-Y1S">
+                                <rect key="frame" x="16" y="301" width="102" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="回程收车时间" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="IAX-1h-ajC">
+                                <rect key="frame" x="16" y="359" width="102" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PlaceHolder" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="VFI-9N-sPE">
+                                <rect key="frame" x="16" y="388" width="288" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="站点信息" id="7iO-Ft-JTV">
                         <barButtonItem key="backBarButtonItem" title="回退" id="zz6-ZH-gGC"/>
-                        <barButtonItem key="leftBarButtonItem" title="回退" id="ENM-Td-1SH">
+                        <barButtonItem key="leftBarButtonItem" title="后退" id="ENM-Td-1SH">
                             <connections>
                                 <segue destination="zVC-Rg-i4d" kind="unwind" unwindAction="unwindToList:" id="7hE-sJ-ihQ"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="lbCloseDate" destination="yg6-zS-dGd" id="CTQ-Qk-BH0"/>
+                        <outlet property="lbCloseDate1" destination="yg6-zS-dGd" id="LJg-Pa-inG"/>
+                        <outlet property="lbCloseDate2" destination="VFI-9N-sPE" id="1hR-bB-2xj"/>
                         <outlet property="lbLine" destination="dpP-nv-vGh" id="5qy-g1-5nL"/>
-                        <outlet property="lbOpenDate" destination="JeB-vI-nPW" id="r7x-lO-ZuU"/>
+                        <outlet property="lbOpenDate1" destination="JeB-vI-nPW" id="vtx-eh-kIx"/>
+                        <outlet property="lbOpenDate2" destination="aw0-HA-C4n" id="O9k-KN-d7o"/>
                         <outlet property="lbStation" destination="A45-pV-q01" id="O32-zi-fkz"/>
                     </connections>
                 </viewController>
